fix/align-arrow-with-toggle-properties

--- a/frontend/app/less/component-properties.less
+++ b/frontend/app/less/component-properties.less
@@ -42,7 +42,7 @@
   border-bottom: 11px solid @color-properties-bg;
   position: absolute;
   top: -11px;
-  right: 17px;
+  right: 15px;
   z-index: 100;
 }
 
